@@ -1,4 +1,5 @@
 Bugs & fixes:
+ - right-click when choosing target cancels the order but also deselects all units - it should not do the latter
 
 New features:
  - add game menu
@@ -6,17 +7,20 @@ New features:
  - add guns
  - add infantry
  - add trucks
+
+ - add map scrolling
  - add active pause
  - add order cancelling
  - make scripts (especially engineActionLogic) less dependant on QML variables and objects
  - add game saving and loading
- - add desktop mode and mobile mode (UI will be more mobile-friendly in the second one. Leave option
+ +/- add desktop mode and mobile mode (UI will be more mobile-friendly in the second one. Leave option
    to change it by hand in options/ config script)
  - add 2 sides (player/ opponent), or even leave it open for any number of players
  - add AI (well, obviously)
  - add keyboard shortcuts
  - add soldier's menu
  - parametrize all unit actions (animation durations, acceleration etc.)
+ - adjust parameters to be more human-readable
 
 Big ideas for the future:
  - add advanced world map option (something like TripleA or Hearts of Iron)
