@@ -5,7 +5,6 @@ import "engineScenarioLogic.js" as ScenarioLogic
 
 Item {
     property string scenarioFile: ""
-    property string selectionMode: "DEFAULT" // Will be used for mode (decktop and mobile)
     property int __aimLineRotation: 0
     property int __rubberBandRotation: 0
     property int __unitIndex: -1
